--- a/index.html
+++ b/index.html
@@ -221,28 +221,33 @@
 
     <div id="chat-area">
         <div
-            style="display:flex; justify-content:space-between; align-items:center; background:white; padding:12px 15px; box-shadow:0 2px 5px rgba(0,0,0,0.05);">
-            <div style="display:flex; flex-direction:column;">
-                <div style="display:flex; align-items:center; gap:10px;">
-                    <span onclick="goBack()" style="cursor:pointer; font-size:1.2rem;">⬅️</span>
-                    <div id="room-title" style="font-weight:bold; font-size:1.1rem;"></div>
-                    <span onclick="toggleUserList()" style="cursor:pointer; font-size:0.9rem; margin-left:5px;">👤 <span
-                            id="user-count-badge">0</span></span>
+            style="display:flex; justify-content:space-between; align-items:center; background:white; padding:10px 15px; border-bottom:1px solid #eee; z-index:2000;">
+            <div style="display:flex; align-items:center; gap:8px;">
+                <span onclick="goBack()" style="cursor:pointer; font-size:1.2rem;">⬅️</span>
+                <div id="room-title"
+                    style="font-weight:bold; font-size:1rem; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; max-width:110px;">
                 </div>
-                <div id="typing-indicator" style="font-size: 0.7rem; color: #6e8efb; height: 15px; margin-left: 30px;">
-                </div>
+                <span onclick="toggleUserList()"
+                    style="cursor:pointer; font-size:0.85rem; background:#f0f2f5; padding:2px 8px; border-radius:12px;">👤
+                    <span id="user-count-badge">0</span></span>
             </div>
-            <div style="display:flex; gap:8px;">
+
+            <div style="display:flex; align-items:center; gap:6px;">
                 <button onclick="setNickname()"
-                    style="background:#eee; border:none; padding:7px 10px; border-radius:8px; font-size:0.8rem;">닉네임</button>
+                    style="background:#eee; border:none; padding:6px 10px; border-radius:8px; font-size:0.75rem;">닉네임</button>
                 <button onclick="leaveChat()"
-                    style="background:#ff4d4d; color:white; border:none; padding:7px 10px; border-radius:8px; font-size:0.8rem; font-weight:bold;">나가기</button>
+                    style="background:#ff4d4d; color:white; border:none; padding:6px 10px; border-radius:8px; font-size:0.75rem; font-weight:bold;">나가기</button>
+                <div onclick="alert('설정 메뉴 준비 중')" style="cursor:pointer; font-size:1.2rem; padding-left:5px;">⚙️</div>
             </div>
         </div>
 
-        <ul id="messages"></ul>
+        <ul id="messages" style="flex:1; padding-bottom:10px;"></ul>
 
-        <form id="form">
+        <div id="typing-indicator"
+            style="padding: 5px 20px; font-size: 0.75rem; color: #6e8efb; background: rgba(240, 242, 245, 0.5); min-height: 25px; display: flex; align-items: center;">
+        </div>
+
+        <form id="form" style="position: static; transform: none; margin: 0 auto 15px auto; width: 95%;">
             <input type="file" id="file-input" style="display:none;" onchange="uploadFile(this)" accept="image/*">
             <button type="button" style="background:none; border:none; font-size:1.2rem; cursor:pointer;"
                 onclick="document.getElementById('file-input').click()">📎</button>
@@ -252,7 +257,7 @@
         </form>
 
         <div id="user-list-modal"
-            style="display:none; position:absolute; top:60px; right:15px; background:white; border-radius:10px; box-shadow:0 4px 15px rgba(0,0,0,0.1); width:140px; z-index:100; padding:10px;">
+            style="display:none; position:absolute; top:55px; left:15px; background:white; border-radius:10px; box-shadow:0 4px 15px rgba(0,0,0,0.1); width:140px; z-index:3000; padding:10px;">
             <div
                 style="font-weight:bold; font-size:0.8rem; border-bottom:1px solid #eee; padding-bottom:5px; margin-bottom:5px;">
                 접속자 명단</div>
