--- a/index.html
+++ b/index.html
@@ -272,6 +272,16 @@
 
         <ul id="messages" style="flex:1; padding-bottom:10px;"></ul>
 
+        <div id="notice-bar"
+            style="display:none; background:#fffbe6; border-bottom:1px solid #ffe58f; padding:8px 15px; font-size:0.85rem; align-items:center; gap:10px; z-index:1500;">
+            <span style="color:#faad14;">📌</span>
+            <div id="notice-text"
+                style="flex:1; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; color:#856404;">
+                공지사항이 여기에 표시됩니다.
+            </div>
+            <span onclick="closeNotice()" style="cursor:pointer; color:#999; font-size:1rem;">✕</span>
+        </div>
+
         <div id="typing-indicator"
             style="padding: 5px 20px; font-size: 0.75rem; color: #6e8efb; background: rgba(240, 242, 245, 0.5); min-height: 25px; display: flex; align-items: center;">
         </div>
@@ -450,6 +460,17 @@
             if (target) target.remove();
         });
 
+        // 소켓 리스너 영역에 추가
+        socket.on('new notice', (data) => {
+            displayNotice(data.text);
+        });
+
+        // 방에 입장할 때 기존 공지가 있다면 가져오기 (enterRoom 함수 내부나 별도 리스너)
+        socket.on('load notice', (text) => {
+            if (text) displayNotice(text);
+            else displayNotice(null);
+        });
+
         // --- 기능 함수들 ---
         function enterRoom(roomName) {
             if (!userName) { setNickname(); if (!userName) return; }
@@ -575,12 +596,12 @@
 
             // 메뉴 레이아웃 구성
             menu.innerHTML = `
-            <div onclick="menuAction('reply')" style="padding:10px; cursor:pointer; border-bottom:1px solid #eee; font-size:0.9rem;">↩️ 답장</div>
-            <div onclick="menuAction('like')" style="padding:10px; cursor:pointer; border-bottom:1px solid #eee; font-size:0.9rem;">❤️ 공감</div>
-            <div onclick="menuAction('copy')" style="padding:10px; cursor:pointer; border-bottom:1px solid #eee; font-size:0.9rem;">📋 복사</div>
-            <div onclick="menuAction('share')" style="padding:10px; cursor:pointer; border-bottom:1px solid #eee; font-size:0.9rem;">📤 공유하기</div>
-            <div id="menu-delete" onclick="menuAction('delete')" style="padding:10px; cursor:pointer; color:red; font-size:0.9rem;">🗑️ 삭제</div>
-        `;
+                <div onclick="menuAction('reply')" style="padding:10px; cursor:pointer; border-bottom:1px solid #eee; font-size:0.9rem;">↩️ 답장</div>
+                <div onclick="menuAction('notice')" style="padding:10px; cursor:pointer; border-bottom:1px solid #eee; font-size:0.9rem; color:#faad14;">📌 공지등록</div>
+                <div onclick="menuAction('like')" style="padding:10px; cursor:pointer; border-bottom:1px solid #eee; font-size:0.9rem;">❤️ 공감</div>
+                <div onclick="menuAction('copy')" style="padding:10px; cursor:pointer; border-bottom:1px solid #eee; font-size:0.9rem;">📋 복사</div>
+                <div onclick="menuAction('delete')" style="padding:10px; cursor:pointer; color:red; font-size:0.9rem;">🗑️ 삭제</div>
+            `;
 
             menu.style.display = 'block';
             menu.style.left = Math.min(x, window.innerWidth - 130) + 'px';
@@ -631,7 +652,32 @@
                     }
                 }
             }
+
+            if (action === 'notice') {
+                if (selectedMsgData.type === 'image') {
+                    alert("이미지는 공지로 등록할 수 없습니다.");
+                } else {
+                    // 서버에 공지 등록 알림 (다른 사람들에게도 보이게 하기 위함)
+                    socket.emit('set notice', { room: currentRoom, text: selectedMsgData.text });
+                }
+            }
             document.getElementById('context-menu').style.display = 'none';
+        }
+
+        function displayNotice(text) {
+            const bar = document.getElementById('notice-bar');
+            const txt = document.getElementById('notice-text');
+            if (text) {
+                bar.style.display = 'flex';
+                txt.textContent = text;
+            } else {
+                bar.style.display = 'none';
+            }
+        }
+
+        // 공지 닫기 (내 화면에서만 닫기)
+        function closeNotice() {
+            document.getElementById('notice-bar').style.display = 'none';
         }
 
         function toggleUserList() {
